--- a/demosite_portfolio.html
+++ b/demosite_portfolio.html
@@ -34,14 +34,16 @@
 </div>
     
 <div id="gallery">
-    <img src="Photo01.png" style="-webkit-transform: rotate(7deg); transform: rotate(7deg);" />
-    <img src="Photo02.png" style="-webkit-transform: rotate(-2deg); transform: rotate(-2deg);" />
-    <img src="Photo03.png" style="-webkit-transform: rotate(4deg); transform: rotate(4deg);" />
+    <img class="photo" src="Photo01.png" style="-webkit-transform: rotate(7deg); transform: rotate(7deg);" />
+    <img class="photo" src="Photo02.png" style="-webkit-transform: rotate(-2deg); transform: rotate(-2deg);" />
+    <img class="photo" src="Photo03.png" style="-webkit-transform: rotate(4deg); transform: rotate(4deg);" />
     <br/>
-    <img src="Photo05.png" style="-webkit-transform: rotate(4deg); transform: rotate(4deg);" />
-    <img src="Photo04.png" style="-webkit-transform: rotate(-2deg); transform: rotate(-2deg);" />
-    <img src="Photo06.png" style="-webkit-transform: rotate(-7deg); transform: rotate(-7deg);" />
+    <img class="photo" src="Photo05.png" style="-webkit-transform: rotate(4deg); transform: rotate(4deg);" />
+    <img class="photo" src="Photo04.png" style="-webkit-transform: rotate(-2deg); transform: rotate(-2deg);" />
+    <img class="photo" src="Photo06.png" style="-webkit-transform: rotate(-7deg); transform: rotate(-7deg);" />
     <br/>
+    <br/>
+    <a href="https://creativecommons.org/publicdomain/zero/1.0/" class="notice"><img class="pdicon" src="PublicDomainzz.svg" />All the content on this page is protected by a Public Domain Dedication (CC0).</a>
 </div>
 
 </body>
