--- a/demosite_main.html
+++ b/demosite_main.html
@@ -32,5 +32,9 @@
     </ul>
 </div>
 
+<img src="Fluffyzz.svg" id="bear" />
+
+<p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
+
 </body>
 </html>
