More complete with Video Player and Bottom Menu

--- a/demosite_about.html
+++ b/demosite_about.html
@@ -32,9 +32,23 @@
     </ul>
 </div>
 
-<img src="Fluffyzz.svg" id="bear" />
+<img src="SwedenWPinzz.svg" id="map" />
 
 <p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
+
+<div class="bottomenu contrastmenualt">
+    <ul>
+        <li>
+        	<a href="demosite_about_video.html" class="iconbutton active"><img src="Videozz.svg" /><br>Video</a>
+        </li>
+        <li>
+        	<a href="demosite_about.html" class="iconbutton" ><img src="Recentzz.svg" /><br>Recent Visits</a>
+        </li>
+        <li>
+        	<a href="demosite_about.html" class="iconbutton" ><img src="Nearestzz.svg" /><br/>Nearest Reseller</a>
+        </li>
+    </ul>
+</div>
 
 </body>
 </html>
