Contact Form Update

--- a/demosite_main.html
+++ b/demosite_main.html
@@ -23,11 +23,11 @@
         	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
         </li>
         <li>
-        	<a href="contact.html" class="normalbutton" >Contact us</a>
+        	<a href="demosite_contact.html" class="normalbutton" >Contact us</a>
         </li>
         <li id="searchbox">
         	<a href='demosite_search.html' class="searchicon">&nbsp;</a>
-        	<input type="text" value="Words" />
+        	<input type="search" name="search" value="Words" />
         </li>
     </ul>
 </div>
