Now files conform to standards and will validate. Also, menu works on all pages.

--- a/demosite_about.html
+++ b/demosite_about.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+		<title>FluffyBear</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="demosite.css">
 		
 </head>
 <body>
 
-<div class="menu normalmenu">
-    <ul>
-        <li>
-        	<a href="demosite_main.html" class="normalbutton active">Home</a>
-        </li>
-        <li>
-        	<a href="demosite_about.html" class="normalbutton" >About Us</a>
-        </li>
-        <li>
-        	<a href="about.html" class="normalbutton" >Services</a>
-        </li>
-        <li>
-        	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
-        </li>
-        <li>
-        	<a href="contact.html" class="normalbutton" >Contact us</a>
-        </li>
-        <li id="searchbox">
-        	<a href='demosite_search.html' class="searchicon">&nbsp;</a>
-        	<input type="text" value="Words" />
-        </li>
-    </ul>
-</div>
+	<div class="menu normalmenu">
+	    <ul>
+	        <li>
+	        	<a href="demosite_main.html" class="normalbutton active">Home</a>
+	        </li>
+	        <li>
+	        	<a href="demosite_about.html" class="normalbutton" >About Us</a>
+	        </li>
+	        <li>
+	        	<a href="about.html" class="normalbutton" >Services</a>
+	        </li>
+	        <li>
+	        	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
+	        </li>
+	        <li>
+	        	<a href="demosite_contact.html" class="normalbutton" >Contact us</a>
+	        </li>
+	        <li id="searchbox">
+	        	<a href='demosite_search.html' class="searchicon">&nbsp;</a>
+	        	<input type="search" name="search" value="Words" />
+	        </li>
+	    </ul>
+	</div>
 
-<img src="SwedenWPinzz.svg" id="map" />
+<img src="SwedenWPinzz.svg" id="map" alt="A map over Sweden with Fluffy Bear stores"/>
 
 <p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
 
 <div class="bottomenu contrastmenualt">
     <ul>
         <li>
-        	<a href="demosite_about_video.html" class="iconbutton active"><img src="Videozz.svg" /><br>Video</a>
+        	<a href="demosite_about_video.html" class="iconbutton active"><img src="Videozz.svg" alt="video icon"/><br>Video</a>
         </li>
         <li>
-        	<a href="demosite_about.html" class="iconbutton" ><img src="Recentzz.svg" /><br>Recent Visits</a>
+        	<a href="demosite_about.html" class="iconbutton" ><img src="Recentzz.svg" alt="recent icon"/><br>Recent Visits</a>
         </li>
         <li>
-        	<a href="demosite_about.html" class="iconbutton" ><img src="Nearestzz.svg" /><br/>Nearest Reseller</a>
+        	<a href="demosite_about.html" class="iconbutton" ><img src="Nearestzz.svg" alt="nearest store icon"/><br/>Nearest Reseller</a>
         </li>
     </ul>
 </div>
