--- a/demosite_main.html
+++ b/demosite_main.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+		<title>FluffyBear</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="demosite.css">
-		
 </head>
 <body>
 
@@ -32,7 +31,7 @@
     </ul>
 </div>
 
-<img src="Fluffyzz.svg" id="bear" />
+<img src="Fluffyzz.svg" id="bear" alt="The Fluffy Bear logotype"/>
 
 <p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
 
