--- a/demosite_about_video.html
+++ b/demosite_about_video.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+		<title>FluffyBear</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="demosite.css">
 		
 </head>
 <body>
 
-<div class="menu normalmenu">
-    <ul>
-        <li>
-        	<a href="demosite_main.html" class="normalbutton active">Home</a>
-        </li>
-        <li>
-        	<a href="demosite_about.html" class="normalbutton" >About Us</a>
-        </li>
-        <li>
-        	<a href="about.html" class="normalbutton" >Services</a>
-        </li>
-        <li>
-        	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
-        </li>
-        <li>
-        	<a href="contact.html" class="normalbutton" >Contact us</a>
-        </li>
-        <li id="searchbox">
-        	<a href='demosite_search.html' class="searchicon">&nbsp;</a>
-        	<input type="text" value="Words" />
-        </li>
-    </ul>
-</div>
+	<div class="menu normalmenu">
+	    <ul>
+	        <li>
+	        	<a href="demosite_main.html" class="normalbutton active">Home</a>
+	        </li>
+	        <li>
+	        	<a href="demosite_about.html" class="normalbutton" >About Us</a>
+	        </li>
+	        <li>
+	        	<a href="about.html" class="normalbutton" >Services</a>
+	        </li>
+	        <li>
+	        	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
+	        </li>
+	        <li>
+	        	<a href="demosite_contact.html" class="normalbutton" >Contact us</a>
+	        </li>
+	        <li id="searchbox">
+	        	<a href='demosite_search.html' class="searchicon">&nbsp;</a>
+	        	<input type="search" name="search" value="Words" />
+	        </li>
+	    </ul>
+	</div>
 
 <img src="VideoPlayerzz.svg" id="player" />
 
