--- a/demosite_about_video.html
+++ b/demosite_about_video.html
@@ -32,20 +32,20 @@
 	    </ul>
 	</div>
 
-<img src="VideoPlayerzz.svg" id="player" />
+<img src="VideoPlayerzz.svg" id="player" alt="Video player mockup image" />
 
 <p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
 
 <div class="bottomenu contrastmenualt">
     <ul>
         <li>
-        	<a href="demosite_about_video.html" class="iconbutton active"><img src="Videozz.svg" /><br>Video</a>
+        	<a href="demosite_about_video.html" class="iconbutton active"><img src="Videozz.svg" alt="video icon"/><br>Video</a>
         </li>
         <li>
-        	<a href="demosite_about.html" class="iconbutton" ><img src="Recentzz.svg" /><br>Recent Visits</a>
+        	<a href="demosite_about.html" class="iconbutton" ><img src="Recentzz.svg" alt="recent icon"/><br>Recent Visits</a>
         </li>
         <li>
-        	<a href="demosite_about.html" class="iconbutton" ><img src="Nearestzz.svg" /><br/>Nearest Reseller</a>
+        	<a href="demosite_about.html" class="iconbutton" ><img src="Nearestzz.svg" alt="nearest store icon"/><br/>Nearest Reseller</a>
         </li>
     </ul>
 </div>
