--- a/demosite_services.html
+++ b/demosite_services.html
@@ -4,6 +4,7 @@
 		<title>FluffyBear</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="demosite.css">
+		
 </head>
 <body>
 
@@ -31,9 +32,6 @@
 	    </ul>
 	</div>
 
-<img src="Fluffyzz.svg" id="bear" alt="The Fluffy Bear logotype"/>
-
-<p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
-
+<p> TODO </p>
 </body>
 </html>
