--- a/demosite_contact.html
+++ b/demosite_contact.html
@@ -17,7 +17,7 @@
 	        	<a href="demosite_about.html" class="normalbutton" >About Us</a>
 	        </li>
 	        <li>
-	        	<a href="about.html" class="normalbutton" >Services</a>
+	        	<a href="demosite_services.html" class="normalbutton" >Services</a>
 	        </li>
 	        <li>
 	        	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
