--- a/demosite_contact.html
+++ b/demosite_contact.html
@@ -92,7 +92,7 @@
 				</tr>				
 				<tr>
 					<td colspan="2" align="center">
-							<button class="contrastmenu formbutton">Submit</button>
+							<button class="formbutton">Submit</button>
 					</td>
 				</tr>				
 </form>
