--- a/demosite_services.html
+++ b/demosite_services.html
@@ -4,7 +4,7 @@
 		<title>FluffyBear</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="demosite.css">
-		
+
 </head>
 <body>
 
@@ -32,6 +32,6 @@
 	    </ul>
 	</div>
 
-<p> TODO </p>
+<p> Testing </p>
 </body>
 </html>
