--- a/demosite_contact.html
+++ b/demosite_contact.html
@@ -17,7 +17,7 @@
         	<a href="demosite_about.html" class="normalbutton" >About Us</a>
         </li>
         <li>
-        	<a href="about.html" class="normalbutton" >Services</a>
+        	<a href="about.html" class="normalbutton" >Products</a>
         </li>
         <li>
         	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
@@ -31,6 +31,8 @@
         </li>
     </ul>
 </div>
+    
+<h1>Contact Us</h1>
 
 <form action="demosite_contact.html" method="get">
 		<table>
