--- a/demosite_main.html
+++ b/demosite_main.html
@@ -16,7 +16,7 @@
 	        	<a href="demosite_about.html" class="normalbutton" >About Us</a>
 	        </li>
 	        <li>
-	        	<a href="demosite_services.html" class="normalbutton" >Services</a>
+	        	<a href="demosite_services.html" class="normalbutton" >Products</a>
 	        </li>
 	        <li>
 	        	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
@@ -31,9 +31,16 @@
 	    </ul>
 	</div>
 
-<img src="Fluffyzz.svg" id="bear" alt="The Fluffy Bear logotype"/>
 
-<p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
+    <h1>Welcome to <em>FluffBear&trade;</em></h1>  
+    
+    <div>
+        <p>
+            <em> FluffBear&trade;</em> specializes in <i> childrens-garments </i> <br>  We produce high quality <b> outdoor clothing </b> for children <i>aged 4-14.</i>
+        </p>
+        <img src="Fluffyzz.svg" id="bear" alt="The Fluffy Bear logotype"/>    
+    </div>
 
+    <p> FluffBear™ company was <b> founded in 1968. </b></p>    
 </body>
 </html>
