--- a/demosite_portfolio.html
+++ b/demosite_portfolio.html
@@ -18,7 +18,7 @@
 	        	<a href="demosite_about.html" class="normalbutton" >About Us</a>
 	        </li>
 	        <li>
-	        	<a href="demosite_services.html" class="normalbutton" >Services</a>
+	        	<a href="demosite_services.html" class="normalbutton" >Products</a>
 	        </li>
 	        <li>
 	        	<a href="demosite_portfolio.html" class="normalbutton" >Portfolio</a>
@@ -32,6 +32,8 @@
 	        </li>
 	    </ul>
 	</div>
+    
+<h1>Our Business Portfolio</h1>
     
 <div id="gallery">
     <img class="photo" src="Photo01.png" style="-webkit-transform: rotate(7deg); transform: rotate(7deg);" alt="Red berries on bush" />
