Made some adjustments.

--- a/demosite_about_video.html
+++ b/demosite_about_video.html
@@ -34,7 +34,7 @@
 
 <img src="VideoPlayerzz.svg" id="player" alt="Video player mockup image" />
 
-<p>FluffBear&trade; is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
+<p><b class="logotyp">FluffBear&trade;</b> is a childrens-garment company founded in 1968. It produces high quality outdoor clothing for children ages 4-14.</p>
 
 <div class="bottomenu contrastmenualt">
     <ul>
