--- a/demosite_main.html
+++ b/demosite_main.html
@@ -36,11 +36,11 @@
     
     <div>
         <p>
-            <em> FluffBear&trade;</em> specializes in <i> childrens-garments </i> <br>  We produce high quality <b> outdoor clothing </b> for children <i>aged 4-14.</i>
+            <b class="logotyp">FluffBear&trade;</b> specializes in childrens-garments. We produce high quality outdoor clothing for children aged 4-14.
         </p>
         <img src="Fluffyzz.svg" id="bear" alt="The Fluffy Bear logotype"/>    
     </div>
 
-    <p> FluffBear™ company was <b> founded in 1968. </b></p>    
+    <p><b class="logotyp">FluffBear&trade;</b> company was founded in 1968.</p>    
 </body>
 </html>
