Just to make some parts have more content.

--- a/demosite_about.html
+++ b/demosite_about.html
@@ -34,7 +34,7 @@
   <div id="content">
      <h1>About <b class="logotyp">FluffBear&trade;</b></h1>
     
-				<p><b class="logotyp">FluffBear&trade;</b> is a children clothing line headquartered in Stockholm that currently focuses exclusively on children's clothing sector.</p>
+				<p><b class="logotyp">FluffBear&trade;</b> is a children clothing line headquartered in Stockholm that currently focuses exclusively on children's clothing sector. The product line targets young and active kids that like outdoor activities and are not afraid to make a statment with their cloths. Reaching the young in Sweden with a firm grip of 20% of the market this premium brands is here to stay!</p>
 
 				<p> We have a network of resellers all over Sweden, and we are increasingly expanding our retailing services. You can reach some of our resellers at the following locations: </p>
 				<div class="outeraddresscontainer">
